<resources>
    <string name="app_name">Issue_tracker</string>
    <string name="label_login_id_hint">아이디</string>
    <string name="label_login_id_placeholder">Input your ID</string>
    <string name="label_login_pwd_hint">비밀번호</string>
    <string name="label_login_pwd_placeholder">Input Your PassWord</string>
    <string name="label_string_login_title">로그인</string>
    <string name="label_string_register_title">회원가입</string>
    <string name="label_string_github_login_title">깃헙 계정으로 로그인</string>
    <string name="label_string_google_login_title">구글 계정으로 로그인</string>
    <string name="tool_bar_title">이슈</string>
    <string name="appbar_filter_icon">appBar_filter_icon</string>
    <string name="appbar_search_icon">appBar_search_icon</string>

    <string name="label_milestone_item_title">제목</string>
    <string name="label_milestone_item_progress">진행률%</string>
    <string name="label_milestone_item_content">마일스톤에 대한 설명 (생략가능) (최대한줄)</string>
    <string name="label_milestone_item_complete_day">완료일(생략가능)</string>
    <string name="label_milestone_item_open_issue">열린 이슈</string>
    <string name="label_milestone_item_close_issue">닫힌 이슈</string>
    <string name="milestone_item_open_issue_count">열린 이슈 %d개</string>
    <string name="milestone_item_close_issue_count">닫힌 이슈 %d개</string>
    <string name="milestone_item_progress">%d 퍼센트</string>

    <string name="milestone_write_title">새로운 마일스톤</string>
    <string name="milestone_write_save_title">저장</string>
    <string name="milestone_write_complete_day_hint">선택 사항(YYYY-MM-DD)</string>
    <string name="milestone_write_complete_day_title">완료일</string>
    <string name="milestone_write_content_hint">선택 사항</string>
    <string name="milestone_write_content_title">설명</string>
    <string name="milestone_write_title_hint">필수 입력</string>
    <string name="milestone_write_title_title">제목</string>
    <string name="milestone_write_compleday_error">잘못된 입력양식</string>
    <string name="milestone_title">마일스톤</string>
    <string name="label_title">레이블</string>

    <string name="label_write_title">새로운 레이블</string>
    <string name="label_wrtie_color_hint">#FFFFFFFF</string>
    <string name="label_write_base_color">FFFFFFFF</string>
    <string name="item_milestone_text">마일스톤</string>
    <string name="item_title">제목</string>

    <string name="issue_write_preview_title">미리보기</string>
    <string name="issue_wrtie_title">이슈작성</string>
    <string name="my_account_title">내 계정</string>
    <string name="my_account_account_info">현재 로그인된 게정 정보</string>
    <string name="my_account_write_issue_count_title">내가 작성한 이슈 개수</string>
    <string name="my_account_assigned_issue_count_title">나에게 할당된 이슈 개수</string>
    <string name="my_account_comment_count_title">내가 남긴 댓길 개수</string>

    <string name="my_account_write_issue_count_value">%d개</string>
    <string name="my_account_assign_issue_count_value">%d개</string>
    <string name="my_account_write_comment_count_value">%d개</string>
    <string name="spinner_default">선택</string>
    <string name="message_cancel">취소하기</string>
    <string name="message_move_to_setting">설정으로 이동하기</string>
    <string name="message_permission_need">권한이 필요합니다</string>
    <string name="message_permission_need_reason">사진을 불러오기 위해서는 권한이 필요합니다</string>
    <string name="message_permission_denied">Permission Denied</string>
    <string name="message_permission_granted">Permission Granted</string>
    <string name="message_invalid_input_error">잘못된 입력 양식</string>
    <string name="message_need_input_message">필수입력값입니다</string>
    <string name="empty_inout">""</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issue_write_label_option_title">레이블</string>
    <string name="issue_write_milestone_option_title">마일스톤</string>
    <string name="issue_write_writer_opiton_title">작성자</string>
    <string name="issue_home_filter_title">필터</string>
    <string name="issue_home_init_title">초기화</string>
    <string name="issue_home_apply_title">적용</string>
    <string name="issue_home_state_title">상태</string>
    <string name="issue_home_filter_writer_title">작성자</string>
    <string name="issue_home_filter_label_title">레이블</string>
    <string name="issue_home_filter_milestone_title">마일스톤</string>
    <string name="issue_detail_open_state_title">열림</string>
    <string name="issue_detail_close_state_title">닫힘</string>

    <string name="issue_detail_issue_log">%s님이 %s에 작성하셨습니다</string>
    <string name="search_title_value">검색</string>
    <string name="search_bar_hint">검색어를 입력하세요</string>
    <string name="filter_milestone_title">마일스톤</string>
    <string name="filter_label_title">레이블</string>
    <string name="filter_writer_title">작성자</string>
    <string name="filter_state_title">상태</string>
    <string name="filter_apply_title">적용</string>
    <string name="filter_initalize_title">초기화</string>
    <string name="filter_title_value">필터</string>
    <string name="string_login_without_mode">비로그인 모드</string>
    <string name="issue_write_title_title">제목</string>
</resources>
