<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.issue.home.IssueHomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/HeadLine6"
                android:layout_width="216dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:text="@string/tool_bar_title" />

            <ImageButton
                android:id="@+id/btn_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/appbar_filter_icon"
                android:src="@drawable/ic_filter_list"
                app:tint="@color/skyBlue" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/appbar_search_icon"
                android:src="@drawable/ic_search"
                app:tint="@color/skyBlue" />


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_issues"
            android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_issue"
            android:layout_width="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_issues"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>